Fix z-index for tooltip in Card

--- a/src/components/ProjectCardList/ProjectCardList.css
+++ b/src/components/ProjectCardList/ProjectCardList.css
@@ -12,3 +12,7 @@
     margin-top: 20px;
   }
 }
+
+.card:hover {
+  z-index: 10;
+}
